crates/plotnik-lib/tests/03-analyze/predicates/regex_syntax_error.txt
Q = (identifier =~ /[/)
==== diagnostics ====
error: invalid regex syntax: unclosed character class
 --> query.ptk:1:21
  |
1 | Q = (identifier =~ /[/)
  |                     ^
==== symbols ====
